# uav_rice

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/images/: annotations.xml  annotations_granular.xml  annotations_more_granular.xml  annotations_true.xml  annotations_updated.xml
data/results/experiment_damagev2_50by50_0.30_1231231241/: 1_1.JPG-test.csv  1_1.JPG-train.csv  1_2.JPG-test.csv  1_2.JPG-train.csv  1_3.JPG-test.csv  1_3.JPG-train.csv  2_1.JPG-test.csv  2_1.JPG-train.csv  2_2.JPG-test.csv  2_2.JPG-train.csv  2_3.JPG-test.csv  2_3.JPG-train.csv  2_4.JPG-test.csv  2_4.JPG-train.csv  3_1.JPG-test.csv  3_1.JPG-train.csv  3_2.JPG-test.csv  3_2.JPG-train.csv  3_3.JPG-test.csv  3_3.JPG-train.csv  3_4.JPG-test.csv  3_4.JPG-train.csv  4_1.JPG-test.csv  4_1.JPG-train.csv
data/results/experiment_damagev2_50by50_0.35_1231231241/: 1_1.JPG-test.csv  1_1.JPG-train.csv  1_2.JPG-test.csv  1_2.JPG-train.csv  1_3.JPG-test.csv  1_3.JPG-train.csv  2_1.JPG-test.csv  2_1.JPG-train.csv  2_2.JPG-test.csv  2_2.JPG-train.csv  2_3.JPG-test.csv  2_3.JPG-train.csv  2_4.JPG-test.csv  2_4.JPG-train.csv  3_1.JPG-test.csv  3_1.JPG-train.csv  3_2.JPG-test.csv  3_2.JPG-train.csv  3_3.JPG-test.csv  3_3.JPG-train.csv  3_4.JPG-test.csv  3_4.JPG-train.csv  4_1.JPG-test.csv  4_1.JPG-train.csv
data/results/experiment_damagev2_50by50_0.40_1231231241/: 1_1.JPG-test.csv  1_1.JPG-train.csv  (+22 more)
notebooks/: analysis.ipynb  show_heatmap.ipynb
uav_utils/: data_classes.py  data_utils.py  display.py  metrics.py  models.py  postprocess.py  preprocessing.py  process.py  utils.py
(+48 files in other folders)
