[tool.poetry]
name = "uav-rice"
version = "0.1.1"
description = "Thesis codes"
authors = ["ninz <nreclarin@gmail.coml>"]
readme = "README.md"
packages = [{include = "uav_utils"}]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
pandas = "^1.5.2"
xmltodict = "^0.13.0"
scipy = "^1.10.0"
matplotlib = "^3.6.2"
sklearn = "^0.0.post1"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.89.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
