[tool.poetry]
name = "uav-rice"
version = "0.1.5"
description = "Thesis codes"
authors = ["ninz <nreclarin@gmail.coml>"]
readme = "README.md"
packages = [{include = "uav_utils"}]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
xmltodict = "^0.13.0"
#scipy = "^1.10.0"
#matplotlib = "^3.6.2"
#scikit-learn = "^1.2.0"
#opencv-python = "^4.7.0.68"
#pandas = "^1.5.2"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.89.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
